--- a/assets/json/tsconfig.json
+++ b/assets/json/tsconfig.json
@@ -1,13 +1,51 @@
 
+
 [
-  {"id":"1001","img":"assets/img/section_01.jpg","title":"【考拉自营 品牌授权 两盒装】妆蕾 RAY 金色补水面膜 10片/盒  .net防伪查验","subhead":"RAY 补水面膜","price":"154"},
-  {"id":"1002","img":"assets/img/section_02.jpg","title":"【考拉自营 品牌授权 两盒装】妆蕾 RAY 金色补水面膜 10片/盒  .net防伪查验","subhead":"RAY 补水面膜","price":"154"},
-  {"id":"1003","img":"assets/img/section_03.jpg","title":"【考拉自营 品牌授权 两盒装】妆蕾 RAY 金色补水面膜 10片/盒  .net防伪查验","subhead":"RAY 补水面膜","price":"154"},
-  {"id":"1004","img":"assets/img/section_04.jpg","title":"【考拉自营 品牌授权 两盒装】妆蕾 RAY 金色补水面膜 10片/盒  .net防伪查验","subhead":"RAY 补水面膜","price":"154"},
-  {"id":"1005","img":"assets/img/section_05.jpg","title":"【考拉自营 品牌授权 两盒装】妆蕾 RAY 金色补水面膜 10片/盒  .net防伪查验","subhead":"RAY 补水面膜","price":"154"},
-  {"id":"1006","img":"assets/img/section_01.jpg","title":"【考拉自营 品牌授权 两盒装】妆蕾 RAY 金色补水面膜 10片/盒  .net防伪查验","subhead":"RAY 补水面膜","price":"154"},
-  {"id":"1007","img":"assets/img/section_02.jpg","title":"【考拉自营 品牌授权 两盒装】妆蕾 RAY 金色补水面膜 10片/盒  .net防伪查验","subhead":"RAY 补水面膜","price":"154"},
-  {"id":"1008","img":"assets/img/section_03.jpg","title":"【考拉自营 品牌授权 两盒装】妆蕾 RAY 金色补水面膜 10片/盒  .net防伪查验","subhead":"RAY 补水面膜","price":"154"},
-  {"id":"1009","img":"assets/img/section_04.jpg","title":"【考拉自营 品牌授权 两盒装】妆蕾 RAY 金色补水面膜 10片/盒  .net防伪查验","subhead":"RAY 补水面膜","price":"154"},
-  {"id":"1010","img":"assets/img/section_05.jpg","title":"【考拉自营 品牌授权 两盒装】妆蕾 RAY 金色补水面膜 10片/盒  .net防伪查验","subhead":"RAY 补水面膜","price":"154"}
+    { "id":"1001",
+      "img":"assets/img/section_01.jpg",
+      "title":"【考拉自营 品牌授权 两盒装】妆蕾 RAY 金色补水面膜 10片/盒  .net防伪查验",
+      "subhead":"RAY 补水面膜",
+      "price":"154",
+      "classifyName":"面膜",
+      "nameLi":["A.H.C","Swisse","兰芝","科颜氏","雪花氏","Dr.jart+"],
+      "nameTitle":"【新人专享】【网易自营 品牌授权】妆蕾 RAY 蚕丝面膜 金色10片+银色10片 共20片.net防伪查验",
+      "subTitleCurImg":"img/xinxilan.png","country":"泰国 | RAY",
+      "container":"一不小心发现的一款超好用的面膜——妆蕾 RAY 面膜！可以看到好多人推荐哦！这款泰国的Ray面膜首先是价格便宜到不行，相比韩国那些面膜性价比更高，而且非常好用，揭下面膜后者的一点都不粘~只有水润~",
+      "detailMoney":"¥98.00",
+      "postage":"包邮",
+      "subMoney":"308",
+      "activeName":"新人专享",
+      "activeContent":"新人专享",
+      "freight":"免运费",
+      "serviceFirstImage":"img/",
+      "timeOut":"11月25日(周日)",
+      "count":"单次限购一件",
+      "optionContent":"收藏",
+      "evaluatePercent":"98%",
+      "people":"18124人"
+    },
+    { "id":"1002",
+      "img":"assets/img/section_02.jpg",
+      "title":"【考拉自营 品牌授权 两盒装】妆蕾 RAY 金色补水面膜 10片/盒  .net防伪查验",
+      "subhead":"RAY 补水面膜",
+      "price":"154",
+      "classifyName":"良品铺子",
+      "nameLi":["三只松鼠","网易严选","百草味","盛香珍","前程唐"],
+      "nameTitle":"良品铺子蛋白素肉（麻辣味）（200g）",
+      "subTitleCurImg":"img/china.JPG","country":"中国",
+      "container":"良品铺子让嘴巴去旅行,这似肉的美味 ",
+      "detailMoney":"¥22.90",
+      "postage":"6.4折",
+      "subMoney":"¥36.00",
+      "activeName":"N元任选",
+      "activeContent":"【点击凑单99元任选14件】",
+      "freight":"满88元包邮",
+      "serviceFirstImage":"img/",
+      "timeOut":"11月27日(周二)",
+      "count":"库存充足",
+      "optionContent":"加入购物车",
+      "evaluatePercent":"86%",
+      "people":"7人"
+    }
 ]
+
