购物车功能的实现（一）

--- a/assets/json/tsconfig.json
+++ b/assets/json/tsconfig.json
@@ -11,7 +11,8 @@
       "nameTitle":"【新人专享】【网易自营 品牌授权】妆蕾 RAY 蚕丝面膜 金色10片+银色10片 共20片.net防伪查验",
       "subTitleCurImg":"img/xinxilan.png","country":"泰国 | RAY",
       "container":"一不小心发现的一款超好用的面膜——妆蕾 RAY 面膜！可以看到好多人推荐哦！这款泰国的Ray面膜首先是价格便宜到不行，相比韩国那些面膜性价比更高，而且非常好用，揭下面膜后者的一点都不粘~只有水润~",
-      "detailMoney":"¥98.00",
+      "detailMoney":"98.00",
+      "shopNum":"1",
       "postage":"包邮",
       "subMoney":"308",
       "activeName":"新人专享",
@@ -34,7 +35,8 @@
       "nameTitle":"良品铺子蛋白素肉（麻辣味）（200g）",
       "subTitleCurImg":"img/china.JPG","country":"中国",
       "container":"良品铺子让嘴巴去旅行,这似肉的美味 ",
-      "detailMoney":"¥22.90",
+      "detailMoney":"22.90",
+      "shopNum":"1",
       "postage":"6.4折",
       "subMoney":"¥36.00",
       "activeName":"N元任选",
